# modmail

./: .gitignore  Cargo.toml  LICENSE.md  README.md  config.example.yml  log4net.config  modmail.csproj
src/: Program.cs  config.rs  main.rs  models.rs
src/Common/Configuration/: BotConfig.cs  Config.cs  ConfigManager.cs  DBConfig.cs  Validator.cs
src/Common/Database/: DBManager.cs  Table.cs
src/Common/Database/tables/: Attachments.cs  Categories.cs  Edits.cs  Messages.cs  Mutes.cs  Permissions.cs  StandardReplies.cs  Threads.cs  UserThreads.cs  Users.cs
src/Common/models/: Exceptions.cs  Types.cs
src/Controllers/: Categories.cs  Controller.cs  MainController.cs  UserThreads.cs
src/Util/: Time.cs
src/bot/: mod.rs
src/controllers/: attachments.rs  categories.rs  messages.rs  mod.rs  threads.rs
src/db/: mod.rs
src/db/tables/: attachments.rs  categories.rs  edits.rs  messages.rs  mod.rs  mutes.rs  permissions.rs  standard_replies.rs  threads.rs  users.rs
