[package]
name = "modmail"
version = "0.1.0"
authors = ["Dylan Hackworth <dylhack@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
log4rs = "1.0.0"
serenity = "0.9.3"
serde = "1.0.118"
serde_yaml = "0.8.14"

[dependencies.tokio]
version = "1.0.1"
features = ["io-util", "rt", "rt-multi-thread", "fs", "macros"]

[dependencies.sqlx]
version = "0.4.1"
features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "offline", "chrono"]
